# af-forge

./: .aider.chat.history.md  .aider.input.history  .bash_history  .claude.json  .dockerignore  .env.example  .git-credentials  .gitconfig  .gitignore  .mcp.json  .opencode.json  888_HOLD_RELEASE_SUMMARY.md  999_SEAL_2026-04-03.md  A2A_PROTOCOL_SPEC.md  AAA_GRADE_SEAL.md  AF-FORGE-OPENCODE-ALIGNMENT.md  AF_FORGE_ARCHITECTURE_KARPATHY_MAPPED.md  AF_FORGE_COMPLETE.md  AF_FORGE_COMPONENT_RESEARCH.md  AF_FORGE_MEMORY_ARCHITECTURE_V2.md  AF_FORGE_OPTIMIZATION_PLAN.md  AF_FORGE_WIKI_ALIGNED.md  AF_FORGE_WIKI_PROPOSAL.md  AF_FORGE_WIKI_SUMMARY.md  AGENTS.md  ALIGNMENT.md  ARCHITECTURE.md  ARIFOS_BOD_SAFE_GOVERNANCE.md  ARIFOS_MICROSOFT_ARCHITECTURE_OVERLAY.md  ARIFOS_SDK_ADAPTER_IMPLEMENTATIONS.md  ARIFOS_SOVEREIGNTY_IMPLEMENTATION_GUIDE.md  ARIFOS_SOVEREIGN_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONSTITUTION.md  COPILOT_STUDIO_ARIFOS_INSTRUCTION_PACK.md  DEPLOYMENT_SEAL.md  DEPLOYMENT_STATUS.md  DOCS_DIAGRAMS.md  (+82 more)
.agent-workbench/: memory.json
.claude/: history.jsonl
.git-hooks/: pre-push
.github/: copilot-instructions.md
.opencode/: opencode.json
.playwright-mcp/: page-2026-04-09T01-05-30-674Z.yml  page-2026-04-09T01-06-29-716Z.yml  page-2026-04-09T01-37-19-460Z.yml
ENGINE/: __init__.py  ac_risk.py
VAULT999/: SEALED_EVENTS.jsonl  SEAL_CHAIN.txt  outcomes.jsonl
WELL/: CHARTER.md  pyproject.toml  server.py  state.json  vault_bridge.py
_archive/: ARCHIVE_MANIFEST.md
af-forge/: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  MAP.md  README.md  (+17 more)
(+623 files in other folders)
